--- a/legacy/sn003-doom/config/theme/notes.org
+++ b/legacy/sn003-doom/config/theme/notes.org
@@ -288,3 +288,13 @@ CLOSED: [2021-05-04 Tue 10:41]
 :LOGBOOK:
 - State "├DONE───┤"  from "├TODO───┤"  [2021-05-04 Tue 10:41]
 :END:
+********* ├KILLED─┤ level 1 again 2
+CLOSED: [2021-05-05 Wed 10:39]
+:LOGBOOK:
+- State "├KILLED─┤"  from              [2021-05-05 Wed 10:39]
+:END:
+********* ├FAILURE┤ level 1 again 3
+CLOSED: [2021-05-05 Wed 10:39]
+:LOGBOOK:
+- State "├FAILURE┤"  from              [2021-05-05 Wed 10:39]
+:END:
