--- a/mantle/theme/zenburn/examples.org
+++ b/mantle/theme/zenburn/examples.org
@@ -21,7 +21,8 @@ Copy/pasted here from Zenburn & my init code:
     - [[file:~/.config/emacs-sn004/packages/elpa/zenburn-theme-20220412.2023/zenburn-theme.el::(defvar zenburn-default-colors-alist]]
   - =./init.el=
     - (aka =<git-root>/mantle/theme/zenburn/init.el=)
-    - [[file:init.el::zenburn-override-colors-alist '((zenburn-magenta-bg . "#4D464B"]]
+    - [[file:init.el::zenburn-override-colors-alist '(("zenburn-magenta-bg" . "#4D464B"]]
+
 
 
 * ├INFO───┤ Doom theme files location
@@ -427,15 +428,16 @@ Originally from:
       ("zenburn-blue-5"   . "#366060")
       ("zenburn-magenta"  . "#DC8CC3"))) ; doom: 'magenta
 
-  (zenburn-override-colors-alist '((zenburn-magenta-bg   . "#4D464B")
-                                   (zenburn-magenta-bg-1 . "#5C4D57")
-                                   (zenburn-magenta-bg-2 . "#6A5463")
-                                   (zenburn-magenta-bg-3 . "#785B6F")
-                                   (zenburn-magenta-bg-4 . "#86627B")
-                                   (zenburn-magenta-bg-5 . "#956987")
-                                   (zenburn-violet       . "#a9a1e1")
-                                   (zenburn-magenta-01   . "#c67eaf")
-                                   (zenburn-magenta-03   . "#9a6288")))
+(zenburn-override-colors-alist '(("zenburn-magenta-bg"   . "#4D464B")
+                                   ("zenburn-magenta-bg-1" . "#5C4D57")
+                                   ("zenburn-magenta-bg-2" . "#6A5463")
+                                   ("zenburn-magenta-bg-3" . "#785B6F")
+                                   ("zenburn-magenta-bg-4" . "#86627B")
+                                   ("zenburn-magenta-bg-5" . "#956987")
+                                   ("zenburn-violet"       . "#a9a1e1")
+                                   ("zenburn-magenta-01"   . "#c67eaf")
+                                   ("zenburn-magenta-03"   . "#9a6288")))
+
 
 (doom-darken (doom-color 'magenta) 0.3)  "#9a6288"
 
@@ -499,13 +501,13 @@ Comments matching up a few of Doom's Zenburn colors or my customizations to actu
 * Custom Colors
 
 #+begin_src emacs-lisp
-  (zenburn-override-colors-alist '((zenburn-magenta-bg   . "#4D464B")
-                                   (zenburn-magenta-bg-1 . "#5C4D57")
-                                   (zenburn-magenta-bg-2 . "#6A5463")
-                                   (zenburn-magenta-bg-3 . "#785B6F")
-                                   (zenburn-magenta-bg-4 . "#86627B")
-                                   (zenburn-magenta-bg-5 . "#956987")
-                                   (zenburn-violet       . "#a9a1e1")
-                                   (zenburn-magenta-01   . "#c67eaf")
-                                   (zenburn-magenta-03   . "#9a6288")))
+  (zenburn-override-colors-alist '(("zenburn-magenta-bg"   . "#4D464B")
+                                   ("zenburn-magenta-bg-1" . "#5C4D57")
+                                   ("zenburn-magenta-bg-2" . "#6A5463")
+                                   ("zenburn-magenta-bg-3" . "#785B6F")
+                                   ("zenburn-magenta-bg-4" . "#86627B")
+                                   ("zenburn-magenta-bg-5" . "#956987")
+                                   ("zenburn-violet"       . "#a9a1e1")
+                                   ("zenburn-magenta-01"   . "#c67eaf")
+                                   ("zenburn-magenta-03"   . "#9a6288")))
 #+end_src
